# infbot.rs

./: .gitignore  Cargo.toml
migrations/: 20250822201127_init.sql  20250823135216_auto_voice_channels.sql
src/: config.rs  main.rs
src/analytics/: posthog.rs
src/commands/: bot.rs  help.rs  mod.rs  module.rs  server.rs
src/database/: auto_voice_channels.rs  auto_voice_channels_installations.rs  mod.rs
src/events/: channel_delete.rs  guild_create.rs  guild_delete.rs  mod.rs  ready.rs  voice_state_update.rs
src/framework/: setup.rs
src/framework_events/: error.rs  mod.rs  pre_command.rs
src/modules/: auto_voice_channels.rs  mod.rs
